# lorenz-animation

./: .gitignore  Lorenz_simulation_python.py  README.md  lorenz_sim_v1.py  lorenz_sim_v2.py  pyproject.toml
