[project]
name = "lorenz-animation"
version = "1.5.0"
description = "Animation platform for Lorenz series of ODEs. 1.5.0 adds stochastic parameterization."
authors = [
    {name = "Dylan J. Roy-Leo",email = "djroy@umass.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "plotly (>=5.0.0)",
    "pandas (>=2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
